--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     },
     "author": "Iren Lorenzo Fonseca",
     "license": "ISC",
-    "bugs": {
-    },
+    "bugs": {},
     "dependencies": {
         "@tensorflow/tfjs": "^4.22.0",
         "@tensorflow/tfjs-backend-wasm": "^4.22.0",
-        "express": "^5.1.0"
+        "dotenv": "^17.2.3",
+        "express": "^5.1.0",
+        "mongoose": "^8.20.1"
     }
 }
